# Find_It_SSU

./: .gitignore  CMakeLists.txt  CMakePresets.json
libs/sqlite3/: sqlite3_debug.lib
